# s3-index

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
s3-index-ui/: index.html  package-lock.json  package.json  vite.config.js
s3-index-ui/src/: App.jsx  main.jsx
s3-index-ui/src/assets/css/: Main.css
s3-index-ui/src/data/: data.json
s3_index/: __init__.py
s3_index/aws/: __init__.py  s3_manager.py
s3_index/index/: index_manager.py
tests/aws/: test_s3_manager.py
tests/index/: noaa-wcsd-pds-index-test.tar.gz_sha256sum  test_index_manager.py
