[project]
name = "s3-index"
version = "25.3.1"
authors = [
  { name="Rudy Klucik", email="klucik@colorado.edu" },
]
maintainers = [
  { name="Rudy Klucik", email="klucik@colorado.edu" },
]
description = "Indexing s3 objects and generating a hash tree"
keywords = ["oceanography"]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiobotocore==2.19.0",
    "boto3==1.36.3",
    "botocore==1.36.3",
    "mock==5.1.0",
    "moto[all]==5.0.27",
    "moto[server]==5.0.27",
    "networkx==3.4.2",
    "numcodecs==0.13.1",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "pytest>=8.3.5",
    "requests==2.32.3",
    "s3fs==2024.2.0",
    "safety==3.2.14",
    "setuptools",
    "typing-extensions==4.10.0",
]

[project.optional-dependencies]
dev = [
    "bandit[toml]==1.8.0",
    "bandit",
    "build",
    "flake8==7.1.1",
    "isort",
    "pooch==1.8.2",
    "pre-commit",
    "pyinstaller",
    "pytest",
    "ruff",
    "twine",
]

[tool.bandit]
exclude_dirs = ["tests"]

#[tool.pre-commit-hooks.bandit]
#exclude = ["*/tests/*"]

[tool.isort]
known_first_party = "s3_index"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
